Corrections applied to media queries  to negate horizontal scrolling. Updated video to explain.

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -9,7 +9,7 @@
   width: 413px;
   height: 413px;
   border-radius: 8px;
-  margin-bottom: 8px;
+  margin-bottom: 12px;
 }
 
 .card__content {
@@ -19,14 +19,14 @@
 }
 
 .card__title {
-  height: 24px;
   font-size: 20px;
+  line-height: 1.2;
   font-weight: 500;
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 330px;
+  max-width: 353px;
 }
 
 .card__like-button {
@@ -37,15 +37,15 @@
   opacity: 40%;
   padding: 0;
   margin: 0;
+  cursor: pointer;
   transition: opacity 0.3s ease-in-out;
 }
 
 .card__like-button:hover {
   opacity: 100%;
-  cursor: pointer;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 455px) {
   .card {
     width: 288px;
   }
