--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,5 @@
 .cards {
-  padding: 20px 0;
+  padding: 20px 0 40px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
@@ -10,9 +10,10 @@
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 413px);
   gap: 40px 20px;
+  max-width: 100%;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 455px) {
   .cards__container {
     grid-template-columns: repeat(auto-fit, 288px);
   }
