--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,12 @@
 .footer {
+  line-height: 1;
   display: flex;
   justify-content: center;
   font-size: 16px;
   font-weight: 400;
   padding: 45px 0;
+}
+
+.footer__copyright {
+  margin: 0;
 }
