--- a/blocks/header.css
+++ b/blocks/header.css
@@ -10,7 +10,7 @@
   height: 26px;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 455px) {
   .header {
     width: 100%;
   }
