--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,10 +1,11 @@
 .profile {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 500;
-  font-style: medium;
   display: flex;
   flex-wrap: wrap;
-  padding: 34px 0 0;
+  padding: 34px 0 20px;
+  border-bottom: rgba(33, 33, 33, 0.4) solid 1px;
+  width: 100%;
 }
 
 .profile__column {
@@ -29,6 +30,7 @@
 .profile__name {
   font-weight: 500;
   font-size: 32px;
+  line-height: 1;
   margin: 0;
   display: -webkit-box;
   overflow: hidden;
@@ -39,6 +41,7 @@
 }
 
 .profile__description {
+  line-height: 1;
   max-width: 420px;
   margin: 0;
   opacity: 70%;
@@ -47,17 +50,16 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-
   max-width: 420px;
 }
 
 .profile__edit-button {
   font-weight: 500;
+  line-height: 1;
+  max-width: 108px;
   border: none;
   background: none;
   padding: 0;
-  width: 108px;
-  height: 16px;
   display: flex;
   gap: 8px;
   opacity: 70%;
@@ -76,6 +78,8 @@
 }
 
 .profile__add-button {
+  align-self: self-end;
+  margin-left: auto;
   font-weight: 500;
   border: none;
   background-color: #212121;
@@ -85,11 +89,11 @@
   border-radius: 8px;
   padding: 0;
   transition: opacity 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
   opacity: 80%;
-  cursor: pointer;
 }
 
 .profile__add-icon {
@@ -98,10 +102,8 @@
   margin-right: 8px;
 }
 
-.profile__border {
-  padding-top: 20px;
-  border-bottom: rgba(33, 33, 33, 0.4) solid 1px;
-  width: 100%;
+.profile__add-text {
+  line-height: 1;
 }
 
 @media screen and (max-width: 658px) {
@@ -119,6 +121,10 @@
     margin-bottom: 12px;
   }
 
+  .profile__column {
+    gap: 32px;
+  }
+
   .profile__user-info {
     gap: 6px;
   }
@@ -127,13 +133,9 @@
     font-size: 30px;
   }
 
-  .profile__description {
-    margin-bottom: 12px;
-  }
-
   .profile__edit-button {
     align-self: center;
-    margin-bottom: 32px;
+    margin-bottom: 20px;
   }
 
   .profile__button-container {
@@ -146,7 +148,7 @@
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 455px) {
   .profile__avatar {
     width: 80px;
     height: 80px;
